--- a/netlify.toml
+++ b/netlify.toml
@@ -6,11 +6,11 @@
   publish = ".output/public"
   
   # Default build command
-  command = "npm run generate"
+  command = "rm -rf node_modules package-lock.json && npm install && npm run generate"
 
 [build.environment]
   # Node.js version
-  NODE_VERSION = "18"
+  NODE_VERSION = "20"
 
 # Redirect rules for SPA routing
 [[redirects]]
